--- a/Web Server/index.htm
+++ b/Web Server/index.htm
@@ -7,13 +7,13 @@
     <!-- Description, Keywords and Author -->
     <!-- Styles -->
     <!-- Bootstrap CSS -->
-    <link href="http://brightlightart.com/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://satisfiedinjesus.org/jason/bootstrap.min.css" rel="stylesheet">
     <!-- jQuery gritter -->
-    <link href="http://brightlightart.com/css/less-style.css" rel="stylesheet">
+    <link href="http://satisfiedinjesus.org/jason/less-style.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link href="http://brightlightart.com/css/style.css" rel="stylesheet">
+    <link href="http://satisfiedinjesus.org/jason/style.css" rel="stylesheet">
     <!--Import materialize.css-->
-    <link rel="stylesheet" href="http://brightlightart.com/css/materialize.min.css" media="screen,projection" />
+    <link rel="stylesheet" href="http://satisfiedinjesus.org/jason/materialize.min.css" media="screen,projection" />
     <!-- Favicon -->
     <link rel="shortcut icon" href="#">
     <!--Let browser know website is optimized for mobile-->
@@ -95,7 +95,7 @@
                                 </div>
 
                                 <div class="row settings-head">
-                                    <label>Automatically Adjust for Daylight Savings</label>
+                                    <label>Daylight Savings Offset</label>
                                     <div class="right switch">
                                         <label>Off 
 																<input id="daylightSwitch" type="checkbox"><span class="lever"></span>On 
@@ -189,28 +189,7 @@
 </select>
                                 </div>
 
-<div class="row">
-                                        <div class="col s4 m4 l4 btn_grid">
-                                            <a class="btn waves-effect waves-light btn_mode_save blue" id="save1" data-mode="save1">Save #1</a>
-                                        </div>
-                                        <div class="col s4 m4 l4 btn_grid">
-                                            <a class="btn waves-effect waves-light btn_mode_save blue" id="save2" data-mode="save2">Save #2</a>
-                                        </div>
-                                        <div class="col s4 m4 l4 btn_grid">
-                                            <a class="btn waves-effect waves-light btn_mode_save blue" id="save3" data-mode="save3">Save #3</a>
-                                        </div>
-                                        <div class="col s4 m4 l4 btn_grid">
-                                            <a class="btn waves-effect waves-light btn_mode_save blue" id="recall1" data-mode="recall1">Restore</a>
-                                        </div>
-                                        <div class="col s4 m4 l4 btn_grid">
-                                            <a class="btn waves-effect waves-light btn_mode_save blue" id="recall2" data-mode="recall2">Restore</a>
-                                        </div>
-                                        <div class="col s4 m4 l4 btn_grid">
-                                            <a class="btn waves-effect waves-light btn_mode_save blue" id="recall3" data-mode="recall3">Restore</a>
-                                        </div>
 
-
-</div>
 
 
                             </div>
@@ -291,43 +270,7 @@
                                         <a id="ringbutton5" class="btn waves-effect waves-light btn_mode_static blue" name="action" data-mode="notails">Chase</a>
                                     </div>
                                     <div class="col s12 m12 l12 btn_grid">
-                                        <a id="ringbutton6" class="btn waves-effect waves-light btn_mode_static blue" name="action" data-mode="minimalist">Minimalist</a>
-                                    </div>
-                                    <div class="col s12 m12 l12 btn_grid">
-                                        <a id="ringbutton7" class="btn waves-effect waves-light btn_mode_static blue" name="action" data-mode="perpetualmotion">Perpetual Motion</a>
-                                    </div>
-                                    <div class="col s12 m12 l12 btn_grid">
-                                        <a id="ringbutton8" class="btn waves-effect waves-light btn_mode_static blue" name="action" data-mode="falling">Falling</a>
-                                    </div>
-                                    <div class="col s12 m12 l12 btn_grid">
-                                        <a id="ringbutton9" class="btn waves-effect waves-light btn_mode_static blue" name="action" data-mode="springs">Springs</a>
-                                    </div>
-                                    <div class="col s12 m12 l12 btn_grid">
-                                        <a id="ringbutton10" class="btn waves-effect waves-light btn_mode_static blue" name="action" data-mode="fountain">Fountain</a>
-                                    </div>
-                                    <div class="col s12 m12 l12 btn_grid">
-                                        <a id="ringbutton11" class="btn waves-effect waves-light btn_mode_static blue" name="action" data-mode="living">Living</a>
-                                    </div>
-                                    <div class="col s12 m12 l12 btn_grid">
-                                        <a id="ringbutton12" class="btn waves-effect waves-light btn_mode_static blue" name="action" data-mode="stars">Stars</a>
-                                    </div>
-                                    <div class="col s12 m12 l12 btn_grid">
-                                        <a id="ringbutton13" class="btn waves-effect waves-light btn_mode_static blue" name="action" data-mode="hope">Hope</a>
-                                    </div>
-                                    <div class="col s12 m12 l12 btn_grid">
-                                        <a id="ringbutton14" class="btn waves-effect waves-light btn_mode_static blue" name="action" data-mode="hope">Peace</a>
-                                    </div>
-                                                                        <div class="col s12 m12 l12 btn_grid">
-                                        <a id="ringbutton15" class="btn waves-effect waves-light btn_mode_static blue" name="action" data-mode="living">Volcanoe</a>
-                                    </div>
-                                    <div class="col s12 m12 l12 btn_grid">
-                                        <a id="ringbutton16" class="btn waves-effect waves-light btn_mode_static blue" name="action" data-mode="stars">Shooting</a>
-                                    </div>
-                                    <div class="col s12 m17 l12 btn_grid">
-                                        <a id="ringbutton13" class="btn waves-effect waves-light btn_mode_static blue" name="action" data-mode="hope">Triumphant</a>
-                                    </div>
-                                    <div class="col s12 m12 l12 btn_grid">
-                                        <a id="ringbutton18" class="btn waves-effect waves-light btn_mode_static blue" name="action" data-mode="hope">Chill</a>
+                                        <a id="ringbutton6" class="btn waves-effect waves-light btn_mode_static blue" name="action" data-mode="minimalist">Wheel</a>
                                     </div>
                                 </div>
                             </div>
@@ -378,10 +321,6 @@
 
                                 <div class="row">
 
-                    <div class="col s12 m3 l3 btn_grid">
-                        <a id="pibutton" class="btn waves-effect waves-light btn_mode_custom blue" name="action" data-mode="tv">Pi Day
-                        </a>
-                    </div>
 
 
                                     <div id="modes">
