Fixes Broken Dependencies

--- a/Web Server/index.htm
+++ b/Web Server/index.htm
@@ -67,7 +67,7 @@
                         <!-- Project widget -->
                         <div class="widget pages-widget">
                             <div class="widget-head br-green">
-                                <h3><img src="http://brightlightart.com/img/settings.png" height="36">General Settings</h3>
+                                <h3><img src="http://satisfiedinjesus.org/jason/settings.png" height="36">General Settings</h3>
                             </div>
 
                             <div class="widget-body">
@@ -204,7 +204,7 @@
                         <!-- Project widget -->
                         <div class="widget pages-widget">
                             <div class="widget-head br-green">
-                                <h3><img src="http://brightlightart.com/img/bulb.png">Color Customization</h3>
+                                <h3><img src="http://satisfiedinjesus.org/jason/bulb.png">Color Customization</h3>
                             </div>
                             <div class="widget-body">
                                 <div class="row">
@@ -250,7 +250,7 @@
                         <div class="widget pages-widget">
 
                             <div class="widget-head br-green">
-                                <h3><img src="http://brightlightart.com/img/clock.png"></i>Ring Modes</h3>
+                                <h3><img src="http://satisfiedinjesus.org/jason/clock.png"></i>Ring Modes</h3>
                             </div>
                             <div class="widget-body">
                                 <div class="row">
@@ -294,7 +294,7 @@
                         <!-- Home chart widget -->
                         <div class="widget pages-widget">
                             <div class="widget-head br-green">
-                                <h3 class="pull-left"><img src=http://brightlightart.com/img/color.png>Number Animations</h3>
+                                <h3 class="pull-left"><img src=http://satisfiedinjesus.org/jason/color.png>Number Animations</h3>
                                 <div class="clearfix"></div>
                             </div>
 
@@ -354,7 +354,7 @@
     <footer class="page-footer blue">
         <div class="footer-copyright">
             <div class="container">© 2018
-                <a class="grey-text text-lighten-4 right" href="http://brightlightart.com">Bright Light Studio Homepage</a>
+                <a class="grey-text text-lighten-4 right" href="">2018 Kickstarter Project</a>
             </div>
         </div>
     </footer>
@@ -843,7 +843,7 @@
 
     <!-- Javascript files -->
     <!-- jQuery -->
-    <script src="http://brightlightart.com/js/jquery.js"></script>
+    <script src="http://satisfiedinjesus.org/jquery.js"></script>
    
 
 </body>
